--- a/Blokus/BlokusCommands/BlokusCommands.vcxproj.filters
+++ b/Blokus/BlokusCommands/BlokusCommands.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="NextMoveCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Resource.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
