--- a/Evo/EvoWindows/EvoWindows.vcxproj.filters
+++ b/Evo/EvoWindows/EvoWindows.vcxproj.filters
@@ -138,5 +138,8 @@
     <ClCompile Include="WorkThreadInterface.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReadBuffer.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
