--- a/Evo/EvolutionCore/EvolutionCore.vcxproj
+++ b/Evo/EvolutionCore/EvolutionCore.vcxproj
@@ -232,6 +232,7 @@
     <ClCompile Include="Interaction.cpp" />
     <ClCompile Include="MortalityTable.ixx" />
     <ClCompile Include="PixelCore.ixx" />
+    <ClCompile Include="SimpleColLUT.ixx" />
     <ClCompile Include="Strategy.cpp" />
     <ClCompile Include="EvolutionCoreWrapperHelpers.cpp" />
     <ClCompile Include="EvolutionCoreWrappers.cpp" />
