--- a/Evo/ShapeLib/ShapeLib.vcxproj
+++ b/Evo/ShapeLib/ShapeLib.vcxproj
@@ -187,8 +187,8 @@
     <ProjectReference Include="..\EvolutionCore\EvolutionCore.vcxproj">
       <Project>{561ad550-b857-4d93-aa39-5ca48e48e02f}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\EvoWindows\EvoWindows.vcxproj">
-      <Project>{8830da2b-c953-4702-a9e7-3bce05366f1b}</Project>
+    <ProjectReference Include="..\Toolbox\WinBasics\WinBasics.vcxproj">
+      <Project>{6a823b71-361a-428b-b329-203a6c5232ed}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
