--- a/Evo/ShapeLib/ShapeLib.vcxproj.filters
+++ b/Evo/ShapeLib/ShapeLib.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="ShapeLib.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TextDisplay.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
