--- a/Evo/EvoWindows/EvoWindows.vcxproj
+++ b/Evo/EvoWindows/EvoWindows.vcxproj
@@ -172,7 +172,7 @@
     <ClCompile Include="SpeedControl.cpp" />
     <ClCompile Include="SpeedControl.ixx" />
     <ClCompile Include="Statistics.ixx" />
-    <ClCompile Include="TextDisplay.ixx" />
+    <ClCompile Include="EvoTextDisplay.ixx" />
     <ClCompile Include="ColorManager.cpp" />
     <ClCompile Include="CrsrWindow.cpp" />
     <ClCompile Include="DspOptWindow.cpp" />
@@ -192,6 +192,9 @@
     <ClCompile Include="Wrappers.ixx" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ShapeLib\ShapeLib.vcxproj">
+      <Project>{f05986e5-5428-415c-aa6b-46de6e36806b}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Toolbox\Win32_utilities\Win32_utilities.vcxproj">
       <Project>{7c1b51ed-011d-4b73-867c-ac23f0a9e6d1}</Project>
     </ProjectReference>
