--- a/Blokus/BlokusCore/BlokusCore.vcxproj.filters
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj.filters
@@ -105,5 +105,8 @@
     <ClCompile Include="Board.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PieceMotion.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
