--- a/Blokus/BlokusCommands/BlokusCommands.vcxproj
+++ b/Blokus/BlokusCommands/BlokusCommands.vcxproj
@@ -145,8 +145,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BlokusCommand.ixx" />
     <ClCompile Include="BlokusCommands.ixx" />
     <ClCompile Include="NextMoveCmd.ixx" />
+    <ClCompile Include="ResetMatchCmd.ixx" />
     <ClCompile Include="Resource.ixx" />
   </ItemGroup>
   <ItemGroup>
