--- a/Blokus/BlokusCommands/BlokusCommands.vcxproj.filters
+++ b/Blokus/BlokusCommands/BlokusCommands.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="ResetMatchCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NextPlayerCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
