--- a/Blokus/BlokusCore/BlokusCore.vcxproj.filters
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj.filters
@@ -123,5 +123,8 @@
     <ClCompile Include="MatchWriterInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Piece.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
