LostOfMoves class. Human player can select only valid Shapes.

--- a/Blokus/BlokusCore/BlokusCore.vcxproj
+++ b/Blokus/BlokusCore/BlokusCore.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="BlokusPreferences.ixx" />
     <ClCompile Include="BlokusUtilities.ixx" />
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="ListOfMoves.ixx" />
     <ClCompile Include="MapOfValidCells.ixx" />
     <ClCompile Include="Board.ixx" />
     <ClCompile Include="Components.cpp" />
