return to last version after going back to VS 17.12.4

--- a/Blokus/BlokusApp/BlokusApp.vcxproj.filters
+++ b/Blokus/BlokusApp/BlokusApp.vcxproj.filters
@@ -45,5 +45,20 @@
     <ClCompile Include="TournamentWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TournamentThread.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ResultReceiver.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TournamentThreadManager.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TournamentThreadManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TournamentThread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
