--- a/Blokus/BlokusApp/BlokusApp.vcxproj
+++ b/Blokus/BlokusApp/BlokusApp.vcxproj
@@ -25,8 +25,13 @@
     <ClCompile Include="BlokusAppMenu.ixx" />
     <ClCompile Include="BlokusAppWindow.cpp" />
     <ClCompile Include="BlokusAppWindow.ixx" />
+    <ClCompile Include="TournamentThreadManager.cpp" />
+    <ClCompile Include="TournamentThreadManager.ixx" />
     <ClCompile Include="BlokusWindow.cpp" />
     <ClCompile Include="BlokusWindow.ixx" />
+    <ClCompile Include="ResultReceiver.ixx" />
+    <ClCompile Include="TournamentThread.cpp" />
+    <ClCompile Include="TournamentThread.ixx" />
     <ClCompile Include="TournamentWindow.cpp" />
     <ClCompile Include="TournamentWindow.ixx" />
   </ItemGroup>
